# airflow-add-ons

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: main.yml
airflow_add_ons/hooks/: gmail_imap_hooks.py  imap_hooks.py
airflow_add_ons/operators/: athena_operators.py  empty_file_to_gcs.py  glue_operators.py  imap_operators.py  lambda_operators.py  python_operators.py  slack_operators.py  zip_operators.py
airflow_add_ons/sensors/: gcs_sensors.py  glue_sensors.py  gmail_imap_sensors.py  imap_sensors.py  s3_sensors.py
requirements/: default.txt
